# lib/controllers/HalftimeContoller.js
@@ -20,4 +20,16 @@ module.exports = {
       res.json(superbowlObject);
     });
   }
+  //   showHalftimeByArtist: (req, res) => {
+  //     SuperBowl.find({}).then(superbowls => {
+  //       const superbowlMapped = superbowls.map(superbowl => {
+  //         superbowl.halftimePerformer.forEach(musician => {});
+  //         if (superbowl.halftimePerformer.musicians.includes(req.query.name)) {
+  //           console.log(req.query);
+  //           return superbowl;
+  //         }
+  //       });
+  //       res.json(superbowlMapped);
+  //     });
+  //   }
 };
